--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <!-- Navigation -->
   <header class="bg-blue-600 text-white fixed w-full top-0 z-10 shadow-md">
     <nav class="container mx-auto flex justify-between items-center py-4">
-      <h1 class="text-xl font-bold">Your Name</h1>
+      <h1 class="text-xl font-bold">Nithin</h1>
       <ul class="flex space-x-6">
         <li><a href="#home" class="hover:text-gray-200">Home</a></li>
         <li><a href="#about" class="hover:text-gray-200">About</a></li>
@@ -149,7 +149,7 @@
   <!-- Footer -->
   <footer class="bg-gray-800 text-white py-4">
     <div class="container mx-auto text-center">
-      <p>&copy; 2025 Your Name. All rights reserved.</p>
+      <p>&copy; 2025 Nithin. All rights reserved.</p>
     </div>
   </footer>
 
