--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name - Power BI Developer & Data Analyst</title>
+  <title>Nithin - Power BI Developer & Data Analyst</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Custom CSS -->
@@ -79,7 +79,7 @@
         I'm an experienced Power BI Developer and Data Analyst with a passion for turning complex data into meaningful insights. Skilled in Power BI, DAX, SQL, and data modeling, I specialize in building interactive dashboards and optimizing data workflows.
       </p>
       <p class="text-lg max-w-2xl mx-auto">
-        Certifications: Microsoft Certified: Power BI Data Analyst Associate (PL-300).
+        Certifications: Microsoft Certified: Power BI Data Analyst Associate (PL-300). Microsoft Certified : Azure AI Engineer Associate (AI - 102)
       </p>
     </div>
   </section>
@@ -133,13 +133,13 @@
       <h2 class="text-3xl font-bold mb-8">Get in Touch</h2>
       <p class="text-lg mb-6">Interested in discussing data projects? Reach out!</p>
       <div class="flex justify-center space-x-6">
-        <a href="https://linkedin.com/in/yourprofile" target="_blank" class="text-2xl hover:text-gray-200">
+        <a href="https://linkedin.com/in/nithin-rajidi" target="_blank" class="text-2xl hover:text-gray-200">
           <i class="fab fa-linkedin"></i> LinkedIn
         </a>
-        <a href="https://github.com/yourusername" target="_blank" class="text-2xl hover:text-gray-200">
+        <a href="https://github.com/nithin399" target="_blank" class="text-2xl hover:text-gray-200">
           <i class="fab fa-github"></i> GitHub
         </a>
-        <a href="mailto:your.email@example.com" class="text-2xl hover:text-gray-200">
+        <a href="mailto:nithinreddyr@gmail.com" class="text-2xl hover:text-gray-200">
           <i class="fas fa-envelope"></i> Email
         </a>
       </div>
