--- a/index.html
+++ b/index.html
@@ -1,43 +1,4 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -56,7 +17,9 @@
       <ul class="flex space-x-6">
         <li><a href="#home" class="hover:text-gray-200">Home</a></li>
         <li><a href="#about" class="hover:text-gray-200">About</a></li>
+        <li><a href="#experience" class="hover:text-gray-200">Experience</a></li>
         <li><a href="#projects" class="hover:text-gray-200">Projects</a></li>
+        <li><a href="#skills" class="hover:text-gray-200">Skills</a></li>
         <li><a href="#contact" class="hover:text-gray-200">Contact</a></li>
       </ul>
     </nav>
@@ -76,22 +39,106 @@
     <div class="container mx-auto text-center">
       <h2 class="text-3xl font-bold mb-8">About Me</h2>
       <p class="text-lg max-w-2xl mx-auto mb-4">
-        I'm an experienced Power BI Developer and Data Analyst with a passion for turning complex data into meaningful insights. Skilled in Power BI, DAX, SQL, and data modeling, I specialize in building interactive dashboards and optimizing data workflows.
+        I am an experienced Power BI Developer and Data Analyst with over 10 years in database management, data migration, and analytics. I specialize in building interactive Power BI dashboards, optimizing SQL/DAX, and driving cloud migrations for banking and education clients.
       </p>
-      <p class="text-lg max-w-2xl mx-auto">
-        Certifications: Microsoft Certified: Power BI Data Analyst Associate (PL-300). Microsoft Certified : Azure AI Engineer Associate (AI - 102)
-      </p>
+      <h3 class="text-xl font-semibold mt-6 mb-4">Education</h3>
+      <p class="text-lg">B.Tech., Electronics and Communication Engineering, 2013<br>JNTU Institute of Engineering, Hyderabad</p>
+      <h3 class="text-xl font-semibold mt-6 mb-4">Certifications</h3>
+      <p class="text-lg">Microsoft Certified: Power BI Data Analyst Associate (PL-300)</p>
+      <h3 class="text-xl font-semibold mt-6 mb-4">Recognition</h3>
+      <ul class="text-lg max-w-2xl mx-auto list-disc list-inside">
+        <li>Industry Solution Award, Microsoft</li>
+        <li>Champion Award, Wells Fargo, Q3 2018-19</li>
+        <li>Top Performer for Consecutive Years</li>
+      </ul>
+      <a href="resume.pdf" download class="mt-6 inline-block bg-blue-600 text-white px-6 py-3 rounded-full font-semibold hover:bg-blue-700">Download Resume</a>
+    </div>
+  </section>
+
+  <!-- Experience Section -->
+  <section id="experience" class="py-16 bg-gray-100">
+    <div class="container mx-auto">
+      <h2 class="text-3xl font-bold text-center mb-12">Experience</h2>
+      <div class="space-y-8 max-w-4xl mx-auto">
+        <!-- Microsoft -->
+        <div class="bg-white rounded-lg shadow-md p-6 flex items-start space-x-4 experience-card">
+          <img src="images/microsoft-logo.png" alt="Microsoft Logo" class="w-16 h-16 object-contain">
+          <div class="flex-1">
+            <h3 class="text-xl font-semibold">Consultant, Microsoft India</h3>
+            <p class="text-gray-600">June 2021 – Present</p>
+            <ul class="list-disc list-inside mt-4 text-gray-700">
+              <li>Coordinated Azure cloud migration for a major banking client.</li>
+              <li>Developed Power BI reports on Synapse SQL pools for education clients.</li>
+              <li>Built ADF pipelines for data flow and migrated Tableau reports to Power BI.</li>
+              <li>Collaborated with stakeholders to design migration roadmaps.</li>
+              <li>Received Industry Solution Award for project excellence.</li>
+            </ul>
+            <button class="toggle-details text-blue-600 mt-4 hover:underline" data-target="microsoft-details">Show More</button>
+            <div id="microsoft-details" class="hidden mt-4 text-gray-700">
+              <ul class="list-disc list-inside">
+                <li>Provided effort estimations for migration components.</li>
+                <li>Designed T-SQL stored procedures and SSIS ETL solutions.</li>
+                <li>Troubleshot performance issues using DMVs and query plans.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- Wells Fargo -->
+        <div class="bg-white rounded-lg shadow-md p-6 flex items-start space-x-4 experience-card">
+          <img src="images/wells-fargo-logo.png" alt="Wells Fargo Logo" class="w-16 h-16 object-contain">
+          <div class="flex-1">
+            <h3 class="text-xl font-semibold">Application System Engineer, Wells Fargo</h3>
+            <p class="text-gray-600">September 2016 – June 2021</p>
+            <ul class="list-disc list-inside mt-4 text-gray-700">
+              <li>Converted DTS to SSIS packages, ensuring data consistency.</li>
+              <li>Configured database mirroring, log shipping, and replication.</li>
+              <li>Enhanced database functionality through T-SQL and SSIS.</li>
+              <li>Earned Champion Award for Q3 2018-19 for migration expertise.</li>
+            </ul>
+            <button class="toggle-details text-blue-600 mt-4 hover:underline" data-target="wells-details">Show More</button>
+            <div id="wells-details" class="hidden mt-4 text-gray-700">
+              <ul class="list-disc list-inside">
+                <li>Migrated SQL Server 2000/2005 to 2012/2014/2016.</li>
+                <li>Debugged SSRS reports and managed user permissions.</li>
+                <li>Resolved high-severity issues with minimal guidance.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- IBM -->
+        <div class="bg-white rounded-lg shadow-md p-6 flex items-start space-x-4 experience-card">
+          <img src="images/ibm-logo.png" alt="IBM Logo" class="w-16 h-16 object-contain">
+          <div class="flex-1">
+            <h3 class="text-xl font-semibold">Application Developer, IBM India Pvt Ltd</h3>
+            <p class="text-gray-600">May 2014 – September 2016</p>
+            <ul class="list-disc list-inside mt-4 text-gray-700">
+              <li>Developed T-SQL scripts, stored procedures, and triggers.</li>
+              <li>Performed side-by-side SQL Server migrations.</li>
+              <li>Monitored database servers for vulnerabilities.</li>
+              <li>Ensured compliance with Sarbanes-Oxley standards.</li>
+            </ul>
+            <button class="toggle-details text-blue-600 mt-4 hover:underline" data-target="ibm-details">Show More</button>
+            <div id="ibm-details" class="hidden mt-4 text-gray-700">
+              <ul class="list-disc list-inside">
+                <li>Managed SQL Server jobs and logs.</li>
+                <li>Conducted UAT testing for database enhancements.</li>
+                <li>Designed maintenance plans for backups and restores.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="py-16 bg-gray-100">
+  <section id="projects" class="py-16 bg-white">
     <div class="container mx-auto">
       <h2 class="text-3xl font-bold text-center mb-12">Projects</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         <!-- Project 1 -->
         <div class="bg-white rounded-lg shadow-md overflow-hidden">
-          <img src="https://via.placeholder.com/400x200?text=Sales+Dashboard" alt="Sales Dashboard" class="w-full h-48 object-cover">
+          <img src="images/sales-dashboard.png" alt="Sales Dashboard" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">Sales Performance Dashboard</h3>
             <p class="text-gray-600 mb-4">A Power BI dashboard analyzing retail sales with DAX measures for YoY growth and regional trends.</p>
@@ -102,7 +149,7 @@
         </div>
         <!-- Project 2 -->
         <div class="bg-white rounded-lg shadow-md overflow-hidden">
-          <img src="https://via.placeholder.com/400x200?text=Churn+Analysis" alt="Churn Analysis" class="w-full h-48 object-cover">
+          <img src="images/churn-analysis.png" alt="Churn Analysis" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">Customer Churn Analysis</h3>
             <p class="text-gray-600 mb-4">Power BI and SQL-based analysis to identify churn drivers and recommend retention strategies.</p>
@@ -114,7 +161,7 @@
         </div>
         <!-- Project 3 -->
         <div class="bg-white rounded-lg shadow-md overflow-hidden">
-          <img src="https://via.placeholder.com/400x200?text=Financial+Report" alt="Financial Report" class="w-full h-48 object-cover">
+          <img src="images/financial-report.png" alt="Financial Report" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">Financial KPI Report</h3>
             <p class="text-gray-600 mb-4">A Power BI report with advanced DAX for profit margins and budget variance.</p>
@@ -122,6 +169,56 @@
             <br>
             <a href="https://github.com/yourusername/financial-report" target="_blank" class="text-blue-600 hover:underline">View Code</a>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Skills Section -->
+  <section id="skills" class="py-16 bg-gray-100">
+    <div class="container mx-auto">
+      <h2 class="text-3xl font-bold text-center mb-12">Technical Skills</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-4xl mx-auto">
+        <div class="bg-white rounded-lg shadow-md p-6">
+          <h3 class="text-xl font-semibold mb-4">Databases</h3>
+          <ul class="list-disc list-inside text-gray-700">
+            <li>Azure SQL MI</li>
+            <li>Microsoft SQL Server</li>
+            <li>Azure SQL Database</li>
+          </ul>
+        </div>
+        <div class="bg-white rounded-lg shadow-md p-6">
+          <h3 class="text-xl font-semibold mb-4">Programming</h3>
+          <ul class="list-disc list-inside text-gray-700">
+            <li>T-SQL</li>
+            <li>SSIS ETL</li>
+            <li>SSRS</li>
+            <li>Power BI</li>
+            <li>ADF</li>
+            <li>Python</li>
+            <li>Powershell</li>
+          </ul>
+        </div>
+        <div class="bg-white rounded-lg shadow-md p-6">
+          <h3 class="text-xl font-semibold mb-4">Tools</h3>
+          <ul class="list-disc list-inside text-gray-700">
+            <li>SSMS</li>
+            <li>Business Intelligence Development Studio</li>
+            <li>SQL Server Data Tools</li>
+            <li>DTS Designer</li>
+            <li>Report Builder</li>
+            <li>DMA</li>
+            <li>Visual Studio</li>
+          </ul>
+        </div>
+        <div class="bg-white rounded-lg shadow-md p-6">
+          <h3 class="text-xl font-semibold mb-4">Domains</h3>
+          <ul class="list-disc list-inside text-gray-700">
+            <li>Banking</li>
+            <li>Capital Markets</li>
+            <li>Telecommunications</li>
+            <li>Education</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -149,7 +246,7 @@
   <!-- Footer -->
   <footer class="bg-gray-800 text-white py-4">
     <div class="container mx-auto text-center">
-      <p>&copy; 2025 Nithin. All rights reserved.</p>
+      <p>© 2025 Nithin. All rights reserved.</p>
     </div>
   </footer>
 
