--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section id="home" class="min-h-screen flex items-center bg-gradient-to-r from-blue-500 to-indigo-600 text-white">
     <div class="container mx-auto text-center">
       <h2 class="text-4xl md:text-6xl font-bold mb-4">Power BI Developer & Data Analyst</h2>
-      <p class="text-lg md:text-xl mb-6">Transforming data into actionable insights with Power BI, SQL, and advanced analytics.</p>
+      <p class="text-lg md:text-xl mb-6">Transforming data into actionable insights with Power BI, SQL, Azure AI and advanced analytics.</p>
       <a href="#projects" class="bg-white text-blue-600 px-6 py-3 rounded-full font-semibold hover:bg-gray-200">View My Work</a>
     </div>
   </section>
@@ -39,12 +39,15 @@
     <div class="container mx-auto text-center">
       <h2 class="text-3xl font-bold mb-8">About Me</h2>
       <p class="text-lg max-w-2xl mx-auto mb-4">
-        I am an experienced Power BI Developer and Data Analyst with over 10 years in database management, data migration, and analytics. I specialize in building interactive Power BI dashboards, optimizing SQL/DAX, and driving cloud migrations for banking and education clients.
+        IT professional with 11+ years of experience across Azure, Power BI, Azure AI, ADF, Synapse, relational databases, and MSBI. Architected Analytical solutions for customers across various industries.  
+        Strong at BI development, cloud/data migrations, performance tuning, and stakeholder collaboration. Oversaw and led vendor teams, ensuring successful completion of projects by 
+        coordinating efforts, monitoring progress, and maintaining clear communication between all stakeholders.  Active contributor to the Microsoft Fabric community. 
       </p>
       <h3 class="text-xl font-semibold mt-6 mb-4">Education</h3>
       <p class="text-lg">B.Tech., Electronics and Communication Engineering, 2013<br>JNTU Institute of Engineering, Hyderabad</p>
       <h3 class="text-xl font-semibold mt-6 mb-4">Certifications</h3>
       <p class="text-lg">Microsoft Certified: Power BI Data Analyst Associate (PL-300)</p>
+      <p class="text-lg">Microsoft Certified: Azure AI Engineer Associate (AI - 102)</p>
       <h3 class="text-xl font-semibold mt-6 mb-4">Recognition</h3>
       <ul class="text-lg max-w-2xl mx-auto list-disc list-inside">
         <li>Industry Solution Award, Microsoft</li>
