Add educational qualification for Machine Learning
Added details about the Executive Post Graduate Programme in Machine Learning and Artificial Intelligence.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       </p>
       <h3 class="text-xl font-semibold mt-6 mb-4">Education</h3>
       <p class="text-lg">B.Tech., Electronics and Communication Engineering, 2013<br>JNTU Institute of Engineering, Hyderabad</p>
+      <p class="text-lg">Executive Post Graduate Programme in Machine Learning and Artificial Intelligence, 2024<br>IIIT, Banglore</p>
       <h3 class="text-xl font-semibold mt-6 mb-4">Certifications</h3>
       <p class="text-lg">Microsoft Certified: Power BI Data Analyst Associate (PL-300)</p>
       <p class="text-lg">Microsoft Certified: Azure AI Engineer Associate (AI - 102)</p>
