--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nithin - Power BI Developer & Data Analyst</title>
+  <title>Nithin - Power BI Developer & AI Enthusiast</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Custom CSS -->
@@ -71,9 +71,15 @@
             <h3 class="text-xl font-semibold">Consultant, Microsoft India</h3>
             <p class="text-gray-600">June 2021 – Present</p>
             <ul class="list-disc list-inside mt-4 text-gray-700">
-              <li>Coordinated Azure cloud migration for a major banking client.</li>
+              <li>Designed analytical solutions for clients across various industries.</li>
+              <li>Lead the vendor teams overlooking end-to-end project completions.</li>
+              <li>Utilized DevOps APIs to automate project management reports in Power BI for multiple projects.</li>
+              <li>Built Power BI reports for Sales consolidation for gaming sector clients utilizing data from blob storage.</li>
+              <li>Built AI Solutions for Pharma and Financial Solution Customers.</li>
+              <li>Built Data model and Paginated reports for Government sector customer.</li>
               <li>Developed Power BI reports on Synapse SQL pools for education clients.</li>
               <li>Built ADF pipelines for data flow and migrated Tableau reports to Power BI.</li>
+              <li>Automated Migration of Power BI tenant to tenant Migrations for a customer utilizing API’s and PowerShell scripts.</li>
               <li>Collaborated with stakeholders to design migration roadmaps.</li>
               <li>Received Industry Solution Award for project excellence.</li>
             </ul>
@@ -94,7 +100,9 @@
             <h3 class="text-xl font-semibold">Application System Engineer, Wells Fargo</h3>
             <p class="text-gray-600">September 2016 – June 2021</p>
             <ul class="list-disc list-inside mt-4 text-gray-700">
-              <li>Converted DTS to SSIS packages, ensuring data consistency.</li>
+              <li>Managed a team of six in overseeing application support and development initiatives.</li>
+              <li>Delivered SSIS/SSRS/Power BI solutions; Migrated legacy workloads and standardized models and measures for consistency and reuse.</li>
+              <li>Drove incident response and root-cause analysis for data quality and performance issues, implemented preventive controls and monitoring.</li>
               <li>Configured database mirroring, log shipping, and replication.</li>
               <li>Enhanced database functionality through T-SQL and SSIS.</li>
               <li>Earned Champion Award for Q3 2018-19 for migration expertise.</li>
