--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Hero Section -->
   <section id="home" class="min-h-screen flex items-center bg-gradient-to-r from-blue-500 to-indigo-600 text-white">
     <div class="container mx-auto text-center">
-      <h2 class="text-4xl md:text-6xl font-bold mb-4">Power BI Developer & Data Analyst</h2>
+      <h2 class="text-4xl md:text-6xl font-bold mb-4">Power BI Developer & AI Enthusiast</h2>
       <p class="text-lg md:text-xl mb-6">Transforming data into actionable insights with Power BI, SQL, Azure AI and advanced analytics.</p>
       <a href="#projects" class="bg-white text-blue-600 px-6 py-3 rounded-full font-semibold hover:bg-gray-200">View My Work</a>
     </div>
