Update image source paths for experience logos

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="space-y-8 max-w-4xl mx-auto">
         <!-- Microsoft -->
         <div class="bg-white rounded-lg shadow-md p-6 flex items-start space-x-4 experience-card">
-          <img src="images/microsoft-logo.png" alt="Microsoft Logo" class="w-16 h-16 object-contain">
+          <img src="microsoft-logo.png" alt="Microsoft Logo" class="w-16 h-16 object-contain">
           <div class="flex-1">
             <h3 class="text-xl font-semibold">Consultant, Microsoft India</h3>
             <p class="text-gray-600">June 2021 – Present</p>
@@ -95,7 +95,7 @@
         </div>
         <!-- Wells Fargo -->
         <div class="bg-white rounded-lg shadow-md p-6 flex items-start space-x-4 experience-card">
-          <img src="images/wells-fargo-logo.png" alt="Wells Fargo Logo" class="w-16 h-16 object-contain">
+          <img src="wells-fargo-logo.png" alt="Wells Fargo Logo" class="w-16 h-16 object-contain">
           <div class="flex-1">
             <h3 class="text-xl font-semibold">Application System Engineer, Wells Fargo</h3>
             <p class="text-gray-600">September 2016 – June 2021</p>
@@ -119,7 +119,7 @@
         </div>
         <!-- IBM -->
         <div class="bg-white rounded-lg shadow-md p-6 flex items-start space-x-4 experience-card">
-          <img src="images/ibm-logo.png" alt="IBM Logo" class="w-16 h-16 object-contain">
+          <img src="ibm-logo.png" alt="IBM Logo" class="w-16 h-16 object-contain">
           <div class="flex-1">
             <h3 class="text-xl font-semibold">Application Developer, IBM India Pvt Ltd</h3>
             <p class="text-gray-600">May 2014 – September 2016</p>
