--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
         </div>
         <!-- Project 2 -->
         <div class="bg-white rounded-lg shadow-md overflow-hidden">
-          <img src="images/churn-analysis.png" alt="Churn Analysis" class="w-full h-48 object-cover">
+          <img src="images/churn-analysis.png" alt="OpenAI - SQL Query Generator" class="w-full h-48 object-cover">
           <div class="p-6">
-            <h3 class="text-xl font-semibold mb-2">Customer Churn Analysis</h3>
-            <p class="text-gray-600 mb-4">Power BI and SQL-based analysis to identify churn drivers and recommend retention strategies.</p>
-            <a href="https://app.powerbi.com/view?YOUR_EMBED_LINK" target="_blank" class="text-blue-600 hover:underline">View Dashboard</a>
+            <h3 class="text-xl font-semibold mb-2">OpenAI - SQL Query Generator</h3>
+            <p class="text-gray-600 mb-4">Generates SQL Query and Results for the Business Analysts and reduces the burden to write SQL queries.</p>
+            <a href="https://youtu.be/0L0m6W_4cDs" target="_blank" class="text-blue-600 hover:underline">View demo</a>
             <br>
             <!-- Embed SQL Gist -->
             <script src="https://gist.github.com/yourusername/YOUR_GIST_ID.js"></script>
