Update image source for SQL Query Generator project

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </div>
         <!-- Project 2 -->
         <div class="bg-white rounded-lg shadow-md overflow-hidden">
-          <img src="images/churn-analysis.png" alt="OpenAI - SQL Query Generator" class="w-full h-48 object-cover">
+          <img src="csql-generator.png" alt="OpenAI - SQL Query Generator" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">OpenAI - SQL Query Generator</h3>
             <p class="text-gray-600 mb-4">Generates SQL Query and Results for the Business Analysts and reduces the burden to write SQL queries.</p>
