--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
         </div>
         <!-- Project 3 -->
         <div class="bg-white rounded-lg shadow-md overflow-hidden">
-          <img src="images/financial-report.png" alt="Financial Report" class="w-full h-48 object-cover">
+          <img src="awareness.png" alt="RAG Implementation" class="w-full h-48 object-cover">
           <div class="p-6">
-            <h3 class="text-xl font-semibold mb-2">Financial KPI Report</h3>
-            <p class="text-gray-600 mb-4">A Power BI report with advanced DAX for profit margins and budget variance.</p>
+            <h3 class="text-xl font-semibold mb-2">RAG - Queensland Government Gambling harm awareness</h3>
+            <p class="text-gray-600 mb-4">Implemented the RAG based solution using Gambling Awareness public data to ensure smooth search across the multiple Powerpoint files.</p>
             <a href="https://app.powerbi.com/view?YOUR_EMBED_LINK" target="_blank" class="text-blue-600 hover:underline">View Dashboard</a>
             <br>
             <a href="https://github.com/yourusername/financial-report" target="_blank" class="text-blue-600 hover:underline">View Code</a>
