--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">RAG - Queensland Government Gambling harm awareness</h3>
             <p class="text-gray-600 mb-4">Implemented the RAG based solution using Gambling Awareness public data to ensure smooth search across the multiple Powerpoint files.</p>
-            <a href="https://studio.youtube.com/1gT8dKfNoSE" target="_blank" class="text-blue-600 hover:underline">View Demo</a>
+            <a href="https://youtu.be/1gT8dKfNoSE" target="_blank" class="text-blue-600 hover:underline">View Demo</a>
 
           </div>
         </div>
