--- a/index.html
+++ b/index.html
@@ -150,13 +150,10 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         <!-- Project 1 -->
         <div class="bg-white rounded-lg shadow-md overflow-hidden">
-          <img src="images/sales-dashboard.png" alt="Sales Dashboard" class="w-full h-48 object-cover">
+          <img src="project-management.png" alt="Project Management Dashboard" class="w-full h-48 object-cover">
           <div class="p-6">
-            <h3 class="text-xl font-semibold mb-2">Sales Performance Dashboard</h3>
-            <p class="text-gray-600 mb-4">A Power BI dashboard analyzing retail sales with DAX measures for YoY growth and regional trends.</p>
-            <a href="https://app.powerbi.com/view?YOUR_EMBED_LINK" target="_blank" class="text-blue-600 hover:underline">View Dashboard</a>
-            <br>
-            <a href="https://github.com/yourusername/sales-dashboard" target="_blank" class="text-blue-600 hover:underline">View Code</a>
+            <h3 class="text-xl font-semibold mb-2">Project Management Dashboard</h3>
+            <p class="text-gray-600 mb-4">A Power BI dashboard automating the project status updates to leadership team utilizing the devops APIs and Odata Queries</p>
           </div>
         </div>
         <!-- Project 2 -->
