--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <img src="project-management.png" alt="Project Management Dashboard" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">Project Management Dashboard</h3>
-            <p class="text-gray-600 mb-4">A Power BI dashboard automating the project status updates to leadership team utilizing the devops APIs and Odata Queries</p>
+            <p class="text-gray-600 mb-4">A Power BI dashboard automating the project status updates to leadership team utilizing the devops APIs and Odata Queries for multile projects</p>
           </div>
         </div>
         <!-- Project 2 -->
