Change 'View demo' link text to 'View Demo'

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">OpenAI - SQL Query Generator</h3>
             <p class="text-gray-600 mb-4">Generates SQL Query and Results for the Business Analysts and reduces the burden to write SQL queries.</p>
-            <a href="https://youtu.be/0L0m6W_4cDs" target="_blank" class="text-blue-600 hover:underline">View demo</a>
+            <a href="https://youtu.be/0L0m6W_4cDs" target="_blank" class="text-blue-600 hover:underline">View Demo</a>
             <br>
             <!-- Embed SQL Gist -->
             <script src="https://gist.github.com/yourusername/YOUR_GIST_ID.js"></script>
