--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
   <section id="projects" class="py-16 bg-gray-50">
     <div class="container mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-12 animate-slide-up text-gray-900">Projects</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+      <div class="flex overflow-x-auto space-x-8 pb-4 snap-x snap-mandatory scrollbar-thin scrollbar-thumb-indigo-500 scrollbar-track-gray-200">
         <!-- Project 1 -->
-        <div class="bg-white rounded-xl shadow-md overflow-hidden transition-all duration-300 hover:shadow-2xl border border-purple-200">
+        <div class="flex-shrink-0 w-80 bg-white rounded-xl shadow-md overflow-hidden transition-all duration-300 hover:shadow-2xl border border-purple-200 snap-center">
           <img src="project-management.png" alt="Project Management Dashboard" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2 text-gray-900">Project Management Dashboard</h3>
@@ -193,7 +193,7 @@
           </div>
         </div>
         <!-- Project 2 -->
-        <div class="bg-white rounded-xl shadow-md overflow-hidden transition-all duration-300 hover:shadow-2xl border border-purple-200">
+        <div class="flex-shrink-0 w-80 bg-white rounded-xl shadow-md overflow-hidden transition-all duration-300 hover:shadow-2xl border border-purple-200 snap-center">
           <img src="sql-generator.png" alt="OpenAI - SQL Query Generator" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2 text-gray-900">OpenAI - SQL Query Generator</h3>
@@ -202,7 +202,7 @@
           </div>
         </div>
         <!-- Project 3 -->
-        <div class="bg-white rounded-xl shadow-md overflow-hidden transition-all duration-300 hover:shadow-2xl border border-purple-200">
+        <div class="flex-shrink-0 w-80 bg-white rounded-xl shadow-md overflow-hidden transition-all duration-300 hover:shadow-2xl border border-purple-200 snap-center">
           <img src="awareness.png" alt="RAG Implementation" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2 text-gray-900">RAG - Queensland Government Gambling harm awareness</h3>
