--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <!-- Hero Section -->
   <section id="home" class="min-h-screen flex items-center bg-gradient-to-r from-indigo-600 via-purple-600 to-pink-600 text-white">
     <div class="container mx-auto text-center px-4 animate-fade-in">
-      <img src="profile-pic.jpg" alt="Nithin Profile Picture" class="w-32 h-32 rounded-full mx-auto mb-6 shadow-xl object-cover border-4 border-white/30">
+      <img src="profile-pic.jfif" alt="Nithin Profile Picture" class="w-32 h-32 rounded-full mx-auto mb-6 shadow-xl object-cover border-4 border-white/30">
       <h2 class="text-4xl md:text-6xl font-bold mb-4">Power BI Developer & AI Enthusiast</h2>
       <p class="text-lg md:text-xl mb-6 max-w-2xl mx-auto">Transforming data into actionable insights with Power BI, SQL, Azure AI and advanced analytics.</p>
       <a href="#projects" class="bg-white text-indigo-700 px-6 py-3 rounded-full font-semibold hover:bg-gray-100 transition-colors duration-200 inline-block shadow-lg hover:shadow-xl">View My Work</a>
