--- a/index.html
+++ b/index.html
@@ -210,6 +210,33 @@
             <a href="https://youtu.be/1gT8dKfNoSE" target="_blank" rel="noopener noreferrer" class="text-indigo-700 hover:underline font-medium hover:text-purple-700">View Demo</a>
           </div>
         </div>
+        <!-- Project 4 -->
+        <div class="flex-shrink-0 w-80 bg-white rounded-xl shadow-md overflow-hidden transition-all duration-300 hover:shadow-2xl border border-purple-200 snap-center">
+          <img src="absenteeism-forecast.png" alt="Absenteeism Forecast Reports" class="w-full h-48 object-cover">
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2 text-gray-900">Absenteeism Forecast Reports</h3>
+            <p class="text-gray-700 mb-4">Built comprehensive reports for absenteeism forecasting in the educational sector, tailored for various audiences using Synapse SQL pool data. Implemented multi-level row-level security to ensure data privacy and compliance.</p>
+            <a href="#contact" class="text-indigo-700 hover:underline font-medium hover:text-purple-700">Contact for Demo</a>
+          </div>
+        </div>
+        <!-- Project 5 -->
+        <div class="flex-shrink-0 w-80 bg-white rounded-xl shadow-md overflow-hidden transition-all duration-300 hover:shadow-2xl border border-purple-200 snap-center">
+          <img src="gaming-sales.png" alt="Gaming Sector Sales Report" class="w-full h-48 object-cover">
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2 text-gray-900">Gaming Sector Sales Report</h3>
+            <p class="text-gray-700 mb-4">Developed a dynamic sales report for a gaming sector customer, highlighting year-over-year (YOY) sales trends with interactive visualizations and key performance indicators for strategic decision-making.</p>
+            <a href="#contact" class="text-indigo-700 hover:underline font-medium hover:text-purple-700">Contact for Demo</a>
+          </div>
+        </div>
+        <!-- Project 6 -->
+        <div class="flex-shrink-0 w-80 bg-white rounded-xl shadow-md overflow-hidden transition-all duration-300 hover:shadow-2xl border border-purple-200 snap-center">
+          <img src="tableau-migration.png" alt="Tableau to Power BI Migration" class="w-full h-48 object-cover">
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2 text-gray-900">Tableau to Power BI Migration</h3>
+            <p class="text-gray-700 mb-4">Led the migration of Tableau reports to Power BI, converting Level of Detail (LOD) expressions to DAX measures, remodeling data structures for optimal performance, and ensuring seamless transition with no loss in functionality.</p>
+            <a href="#contact" class="text-indigo-700 hover:underline font-medium hover:text-purple-700">Contact for Demo</a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
