Add new projects and skills to index.html

--- a/index.html
+++ b/index.html
@@ -237,6 +237,33 @@
             <a href="#contact" class="text-indigo-700 hover:underline font-medium hover:text-purple-700">Contact for Demo</a>
           </div>
         </div>
+        <!-- Project 7 -->
+        <div class="flex-shrink-0 w-80 bg-white rounded-xl shadow-md overflow-hidden transition-all duration-300 hover:shadow-2xl border border-purple-200 snap-center">
+          <img src="paginated-reports.png" alt="Paginated Reports for Government" class="w-full h-48 object-cover">
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2 text-gray-900">Paginated Reports for Government Sector</h3>
+            <p class="text-gray-700 mb-4">Developed advanced paginated reports for government sector customers, creating the data model from scratch using Synapse Analytics. Ensured high-fidelity pixel-perfect outputs and integrated complex calculations for regulatory reporting compliance.</p>
+            <a href="#contact" class="text-indigo-700 hover:underline font-medium hover:text-purple-700">Contact for Demo</a>
+          </div>
+        </div>
+        <!-- Project 8 -->
+        <div class="flex-shrink-0 w-80 bg-white rounded-xl shadow-md overflow-hidden transition-all duration-300 hover:shadow-2xl border border-purple-200 snap-center">
+          <img src="sql-cloud-migration.png" alt="On-Prem to Cloud SQL Migration" class="w-full h-48 object-cover">
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2 text-gray-900">On-Prem to Cloud SQL Migration</h3>
+            <p class="text-gray-700 mb-4">Coordinated and automated the migration of on-premises SQL Server databases to Azure cloud for a large banking customer, leveraging Azure Data Factory pipelines, Database Migration Assistant, and custom scripts to minimize downtime and ensure data integrity across petabyte-scale environments.</p>
+            <a href="#contact" class="text-indigo-700 hover:underline font-medium hover:text-purple-700">Contact for Demo</a>
+          </div>
+        </div>
+        <!-- Project 9 -->
+        <div class="flex-shrink-0 w-80 bg-white rounded-xl shadow-md overflow-hidden transition-all duration-300 hover:shadow-2xl border border-purple-200 snap-center">
+          <img src="tenant-migration.png" alt="Power BI Tenant Migration Automation" class="w-full h-48 object-cover">
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2 text-gray-900">Power BI Tenant Migration Automation</h3>
+            <p class="text-gray-700 mb-4">Automated tenant-to-tenant Power BI workspace migrations using Power BI REST APIs and Microsoft Fabric PowerShell modules, handling thousands of reports, datasets, and gateways while preserving permissions, schedules, and custom configurations for enterprise-scale deployments.</p>
+            <a href="#contact" class="text-indigo-700 hover:underline font-medium hover:text-purple-700">Contact for Demo</a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -245,7 +272,7 @@
   <section id="skills" class="py-16 bg-white">
     <div class="container mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-12 animate-slide-up text-gray-900">Technical Skills</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-4xl mx-auto">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-5xl mx-auto">
         <div class="bg-gray-50 rounded-xl shadow-md p-6 transition-all duration-300 hover:shadow-lg border border-indigo-200">
           <h3 class="text-xl font-semibold mb-4 flex items-center text-gray-900"><i class="fas fa-database mr-2 text-indigo-700"></i>Databases</h3>
           <ul class="list-disc list-inside text-gray-700 space-y-1">
@@ -264,6 +291,7 @@
             <li>ADF</li>
             <li>Python</li>
             <li>Powershell</li>
+            <li>Microsoft Fabric</li>
           </ul>
         </div>
         <div class="bg-gray-50 rounded-xl shadow-md p-6 transition-all duration-300 hover:shadow-lg border border-indigo-200">
