Revise project descriptions in index.html
Updated project descriptions for clarity and detail.

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <img src="project-management.png" alt="Project Management Dashboard" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2 text-gray-900">Project Management Dashboard</h3>
-            <p class="text-gray-700 mb-4">A Power BI dashboard automating the project status updates to leadership team utilizing the devops APIs and Odata Queries for multiple projects</p>
+            <p class="text-gray-700 mb-4">Created an interactive Power BI dashboard that automates real-time project status updates for leadership, integrating DevOps APIs and OData queries to streamline reporting across multiple projects.</p>
             <a href="#contact" class="text-indigo-700 hover:underline font-medium hover:text-purple-700">Contact for Demo</a>
           </div>
         </div>
@@ -197,7 +197,7 @@
           <img src="sql-generator.png" alt="OpenAI - SQL Query Generator" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2 text-gray-900">OpenAI - SQL Query Generator</h3>
-            <p class="text-gray-700 mb-4">Generates SQL Query and Results for the Business Analysts and reduces the burden to write SQL queries.</p>
+            <p class="text-gray-700 mb-4">Developed an AI-powered tool leveraging OpenAI to generate accurate SQL queries and results, simplifying the process for business analysts and reducing query development time.</p>
             <a href="https://youtu.be/0L0m6W_4cDs" target="_blank" rel="noopener noreferrer" class="text-indigo-700 hover:underline font-medium hover:text-purple-700">View Demo</a>
           </div>
         </div>
@@ -205,8 +205,8 @@
         <div class="flex-shrink-0 w-80 bg-white rounded-xl shadow-md overflow-hidden transition-all duration-300 hover:shadow-2xl border border-purple-200 snap-center">
           <img src="awareness.png" alt="RAG Implementation" class="w-full h-48 object-cover">
           <div class="p-6">
-            <h3 class="text-xl font-semibold mb-2 text-gray-900">RAG - Queensland Government Gambling harm awareness</h3>
-            <p class="text-gray-700 mb-4">Implemented the RAG based solution using Gambling Awareness public data to ensure smooth search across the multiple Powerpoint files.</p>
+            <h3 class="text-xl font-semibold mb-2 text-gray-900">RAG - Queensland Government Gambling Harm Awareness</h3>
+            <p class="text-gray-700 mb-4">Designed a Retrieval-Augmented Generation (RAG) solution for the Queensland Government, enabling efficient search and analysis of public gambling awareness data across multiple PowerPoint files.</p>
             <a href="https://youtu.be/1gT8dKfNoSE" target="_blank" rel="noopener noreferrer" class="text-indigo-700 hover:underline font-medium hover:text-purple-700">View Demo</a>
           </div>
         </div>
