Update education institution name in index.html

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         coordinating efforts, monitoring progress, and maintaining clear communication between all stakeholders.  Active contributor to the Microsoft Fabric community. 
       </p>
       <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-900">Education</h3>
-      <p class="text-lg leading-relaxed text-gray-700">B.Tech., Electronics and Communication Engineering, 2013<br>JNTU Institute of Engineering, Hyderabad</p>
+      <p class="text-lg leading-relaxed text-gray-700">B.Tech., Electronics and Communication Engineering, 2013<br>JNTU, Hyderabad</p>
       <p class="text-lg leading-relaxed text-gray-700">Executive Post Graduate Programme in Machine Learning and Artificial Intelligence, 2024<br>IIIT, Bangalore</p>
       <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-900">Certifications</h3>
       <p class="text-lg leading-relaxed text-gray-700">Microsoft Certified: Power BI Data Analyst Associate (PL-300)</p>
