--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         </div>
         <!-- Project 4 -->
         <div class="flex-shrink-0 w-80 bg-white rounded-xl shadow-md overflow-hidden transition-all duration-300 hover:shadow-2xl border border-purple-200 snap-center">
-          <img src="absenteeism-forecast.png" alt="Absenteeism Forecast Reports" class="w-full h-48 object-cover">
+          <img src="absent.png" alt="Absenteeism Forecast Reports" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2 text-gray-900">Absenteeism Forecast Reports</h3>
             <p class="text-gray-700 mb-4">Built comprehensive reports for absenteeism forecasting in the educational sector, tailored for various audiences using Synapse SQL pool data. Implemented multi-level row-level security to ensure data privacy and compliance.</p>
